--- a/xpdc/JavaSource/jasperreports.properties
+++ b/xpdc/JavaSource/jasperreports.properties
@@ -7,7 +7,7 @@
 # http://jasperforge.org/uploads/publish/jasperreportswebsite/trunk/faq.html
 
 ! Yusuf (27/08/13) - Ignore fonts biar gak error
-net.sf.jasperreports.awt.ignore.missing.font=true
+net.sf.jasperreports.awt.ignore.missing.font=True
 
 ! [XLS]
 # this gets rid of the repeating column headers and footers in exports
