--- a/xpdc/JavaSource/app.properties
+++ b/xpdc/JavaSource/app.properties
@@ -19,6 +19,10 @@ report.print_stt_blank=print_stt_blank
 report.print_rincian_barang=print_rincian_barang
 report.report_tagihan=report_tagihan
 report.report_tagihan_det=report_tagihan_det
+report.print_stt_pdf=print_stt_pdf
+report.print_stt_blank_pdf=print_stt_blank_pdf
+report.print_rincian_barang_pdf=print_rincian_barang_pdf
+report.print_rincian_barang_biaya=print_rincian_barang_biaya
 
 # Email (GMail MaiBro)
 email.host=smtp.gmail.com
