--- a/xpdc/JavaSource/jasperreports.properties
+++ b/xpdc/JavaSource/jasperreports.properties
@@ -31,7 +31,8 @@ net.sf.jasperreports.export.csv.field.delimiter=;
 
 ! [HTML]
 # this gets rid of the repeating column headers and footers in exports
-net.sf.jasperreports.export.html.exclude.origin.band.1=columnHeader
-net.sf.jasperreports.export.html.exclude.origin.band.2=pageFooter
+# Yusuf (6 Des 13) - Disable biar di HTML nya tetap keluar header dan footer nya
+#net.sf.jasperreports.export.html.exclude.origin.band.1=columnHeader
+#net.sf.jasperreports.export.html.exclude.origin.band.2=pageFooter
 # keep the first column header on export
 net.sf.jasperreports.export.html.exclude.origin.keep.first.band.1=columnHeader
