--- a/xpdc/JavaSource/app.properties
+++ b/xpdc/JavaSource/app.properties
@@ -24,15 +24,24 @@ report.print_stt_blank_pdf=print_stt_blank_pdf
 report.print_rincian_barang_pdf=print_rincian_barang_pdf
 report.print_rincian_barang_biaya=print_rincian_barang_biaya
 
-# Email (GMail MaiBro)
-email.host=smtp.gmail.com
-email.port=587
+# Email (GMail)
+email.host=mail.runagworld.net
+email.port=25
 email.protocol=smtp
-email.username=xpdcsma@gmail.com
-email.password=suksesmakmur
-email.auth=true
-email.starttls=true
+email.username=
+email.password=
+email.auth=false
+email.starttls=false
 email.quitwait=false
+#email.host=smtp.gmail.com
+#email.port=587
+#email.protocol=smtp
+#email.username=xpdcsma@gmail.com
+#email.password=suksesmakmur
+#email.auth=true
+#email.starttls=true
+#email.quitwait=false
+
 
 # Database
 #jdbc.url=jdbc:mysql://localhost:3306/ekspedisi?autoReconnect=true
