--- a/xpdc/JavaSource/log4j.properties
+++ b/xpdc/JavaSource/log4j.properties
@@ -3,7 +3,7 @@
 ! tingkatan logger = ALL/DEBUG/INFO/WARN/ERROR/FATAL/OFF
 
 ! log ke console, untuk debug/testing
-	log4j.rootLogger=WARN, stdout
+	log4j.rootLogger=INFO, stdout
 	log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 	log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 	log4j.appender.stdout.layout.ConversionPattern=[%-5p][%c\:%L] - %m\n
